--- a/Boilerplate/index.html
+++ b/Boilerplate/index.html
@@ -1,43 +1,71 @@
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
+	<head>
 
-        <!-- Header -->
-        <header role="banner">
-            <nav role="navigation">
-            </nav>
-        </header>
-        <!-- Header -->
+		<!-- Document Info -->
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<title></title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Document Info -->
 
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/helpers.css">
+		<link rel="stylesheet" href="css/print.css">
+		<!-- Stylesheets -->
 
-        <!-- Main Content -->
-        <main role="main">
-        </main>
-        <!-- Main Content -->
+		<!-- Modernizr -->
+		<script src="js/vendor/modernizr-3.3.1.min.js"></script>
+		<!-- Modernizr -->
 
+	</head>
+	<body>
 
-        <!-- Secondary Content -->
-        <aside role="complementary">
-        </aside>
-        <!-- Secondary Content -->
-
-
-        <!-- Footer -->
-        <footer role="contentinfo">
-        </footer>
-        <!-- Footer -->
+		<!--[if lte IE 9]>
+			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+		<![endif]-->
 
 
-        <!-- Javascript -->
-        <script src="js/main.js"></script>
-        <!-- Javascript -->
+		<!-- Header -->
+		<header role="banner">
+		</header>
+		<!-- Header -->
 
-    </body>
+
+		<!-- Main Content -->
+		<main role="main">
+		</main>
+		<!-- Main Content -->
+
+
+		<!-- Secondary Content -->
+		<aside role="complementary">
+		</aside>
+		<!-- Secondary Content -->
+
+
+		<!-- Footer -->
+		<footer role="contentinfo">
+		</footer>
+		<!-- Footer -->
+
+
+		<!-- Javascript -->
+		<script src="js/main.js"></script>
+		<!-- Javascript -->
+
+
+		<!-- Google Analytics -->
+		<script>
+			window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+			ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+		</script>
+		<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+		<!-- Google Analytics -->
+
+	</body>
 </html>
