--- a/Demo/404.html
+++ b/Demo/404.html
@@ -1,18 +1,34 @@
 <!doctype html>
 <html class="no-js" lang="en">
 	<head>
+
+		<!-- Document Info -->
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Page Not Found | Holden Caulfield</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Document Info -->
+
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/helpers.css">
 		<link rel="stylesheet" href="css/print.css">
+		<!-- Stylesheets -->
+
+		<!-- Modernizr -->
+		<script src="js/vendor/modernizr-3.3.1.min.js"></script>
+		<!-- Modernizr -->
+
 	</head>
 	<body>
+
+		<!--[if lte IE 9]>
+			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+		<![endif]-->
+
 
 		<!-- Header -->
 		<header class="header" role="banner">
@@ -31,7 +47,6 @@
 
 		<!-- Main Content -->
 		<main role="main" class="container">
-
 		</main>
 		<!-- Main Content -->
 
