--- a/Demo/index.html
+++ b/Demo/index.html
@@ -1,18 +1,34 @@
 <!doctype html>
 <html class="no-js" lang="en">
 	<head>
+
+		<!-- Document Info -->
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Work | Holden Caulfield</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Document Info -->
+
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/helpers.css">
 		<link rel="stylesheet" href="css/print.css">
+		<!-- Stylesheets -->
+
+		<!-- Modernizr -->
+		<script src="js/vendor/modernizr-3.3.1.min.js"></script>
+		<!-- Modernizr -->
+
 	</head>
 	<body>
+
+		<!--[if lte IE 9]>
+			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+		<![endif]-->
+
 
 		<!-- Header -->
 		<header class="header" role="banner">
@@ -22,7 +38,7 @@
 			</a>
 
 			<nav class="header__nav" role="navigation">
-				<a href="index.html">Work</a>
+				<a href="index.html" class="is-active">Work</a>
 				<a href="about.html">About</a>
 			</nav>
 		</header>
@@ -141,6 +157,15 @@
 		<!-- Javascript -->
 		<script src="js/main.js"></script>
 		<!-- Javascript -->
+
+
+		<!-- Google Analytics -->
+		<script>
+			window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+			ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+		</script>
+		<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+		<!-- Google Analytics -->
 
 	</body>
 </html>
