Gulp build updates

--- a/Demos/Basic/index.html
+++ b/Demos/Basic/index.html
@@ -155,6 +155,7 @@
 
 
 		<!-- Javascript -->
+		<script src="js/plugins.js"></script>
 		<script src="js/main.js"></script>
 		<!-- Javascript -->
 
