--- a/Demos/Basic/project.html
+++ b/Demos/Basic/project.html
@@ -148,6 +148,7 @@
 
 
 		<!-- Javascript -->
+		<script src="js/plugins.js"></script>
 		<script src="js/main.js"></script>
 		<!-- Javascript -->
 
