Gulp Build updates

--- a/Demos/Gulp+Sass/src/index.html
+++ b/Demos/Gulp+Sass/src/index.html
@@ -11,11 +11,7 @@
 		<!-- Document Info -->
 
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/base.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/helpers.css">
-		<link rel="stylesheet" href="css/print.css">
+		<link rel="stylesheet" href="css/style.css">
 		<!-- Stylesheets -->
 
 		<!-- Modernizr -->
