Adjustment to demos

--- a/Demos/Session_02/project.html
+++ b/Demos/Session_02/project.html
@@ -11,7 +11,11 @@
 		<!-- Document Info -->
 
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/helpers.css">
+		<link rel="stylesheet" href="css/print.css">
 		<!-- Stylesheets -->
 
 		<!-- Modernizr -->
@@ -141,11 +145,6 @@
 			<p><small>© H.Caulfield 2016 | All Rights Reserved</small></p>
 		</footer>
 		<!-- Footer -->
-
-
-		<!-- Javascript -->
-		<script src="js/main.js"></script>
-		<!-- Javascript -->
 
 
 		<!-- Google Analytics -->
