--- a/Demos/Session_02/index.html
+++ b/Demos/Session_02/index.html
@@ -5,7 +5,7 @@
 		<!-- Document Info -->
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Page Not Found | Holden Caulfield</title>
+		<title>Work | Holden Caulfield</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Document Info -->
@@ -38,7 +38,7 @@
 			</a>
 
 			<nav class="header__nav" role="navigation">
-				<a href="index.html">Work</a>
+				<a href="index.html" class="is-active">Work</a>
 				<a href="about.html">About</a>
 			</nav>
 		</header>
@@ -47,6 +47,67 @@
 
 		<!-- Main Content -->
 		<main role="main" class="container">
+			<section class="intro">
+				<div class="intro__main">
+					<h1 class="intro__title">Holden Caulfield</h1>
+					<p class="intro__meta text-meta">Fullstack Designer Extraordinaire</p>
+				</div>
+				<div class="intro__secondary">
+					<p class="intro__desc">Pellentesque ut neque. In auctor lobortis lacus. Vivamus in erat ut urna cursus vestibulum. Vivamus laoreet. Curabitur ullamcorper ultricies nisi. Curabitur ullamcorper ultricies nisi. Etiam rhoncus. Duis leo.</p>
+					<a href="about.html" class="btn">Learn More About Me</a>
+				</div>
+			</section>
+
+			<h2 class="visuallyhidden">Work</h2>
+			<ul class="grid">
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/1.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/2.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/3.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/4.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/5.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+
+				<li>
+					<a href="project.html">
+						<img src="img/thumbs/6.jpg" alt="Description of image goes here">
+						<h3 class="text-flush">Project Title</h3>
+					</a>
+					<p class="text-meta">UX, UI</p>
+				</li>
+			</ul>
 		</main>
 		<!-- Main Content -->
 
@@ -93,9 +154,13 @@
 		<!-- Footer -->
 
 
-		<!-- Javascript -->
-		<script src="js/main.js"></script>
-		<!-- Javascript -->
+		<!-- Google Analytics -->
+		<script>
+			window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+			ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+		</script>
+		<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+		<!-- Google Analytics -->
 
 	</body>
 </html>
