--- a/Demos/Session_03/404.html
+++ b/Demos/Session_03/404.html
@@ -5,7 +5,7 @@
 		<!-- Document Info -->
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Page Not Found</title>
+		<title>Page Not Found | Holden Caulfield</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Document Info -->
@@ -31,32 +31,66 @@
 
 
 		<!-- Header -->
-		<header role="banner">
+		<header class="header" role="banner">
+			<a class="header__logo" href="index.html">
+				<span class="visuallyhidden">Home</span>
+				<img src="img/icons/logo.svg" alt="Holden Caulfield Logo">
+			</a>
+
+			<nav class="header__nav" role="navigation">
+				<a href="index.html">Work</a>
+				<a href="about.html">About</a>
+			</nav>
 		</header>
 		<!-- Header -->
 
 
 		<!-- Main Content -->
-		<main role="main">
+		<main role="main" class="container">
 		</main>
 		<!-- Main Content -->
 
 
 		<!-- Secondary Content -->
-		<aside role="complementary">
+		<aside class="callout" role="complementary">
+			<ul class="callout__list">
+				<li>
+					<a href="">
+						<span class="visuallyhidden">Dribbble</span>
+						<img src="img/icons/dribbble.svg" alt="Dribbble icon">
+					</a>
+				</li>
+
+				<li>
+					<a href="">
+						<span class="visuallyhidden">Twitter</span>
+						<img src="img/icons/twitter.svg" alt="Twitter icon">
+					</a>
+				</li>
+
+				<li>
+					<a href="">
+						<span class="visuallyhidden">LinkedIn</span>
+						<img src="img/icons/linkedin.svg" alt="Linkedin Icon">
+					</a>
+				</li>
+
+				<li>
+					<a href="">
+						<span class="visuallyhidden">Email</span>
+						<img src="img/icons/mail.svg" alt="Email icon">
+					</a>
+				</li>
+			</ul>
 		</aside>
 		<!-- Secondary Content -->
 
 
 		<!-- Footer -->
-		<footer role="contentinfo">
+		<footer class="footer" role="contentinfo">
+			<p><small>© H.Caulfield 2016 | All Rights Reserved</small></p>
 		</footer>
 		<!-- Footer -->
-
-
-		<!-- Javascript -->
-		<script src="js/main.js"></script>
-		<!-- Javascript -->
 
 
 		<!-- Google Analytics -->
