Added Image gallery functionality to demo 3

--- a/Demos/Session_03/project.html
+++ b/Demos/Session_03/project.html
@@ -16,11 +16,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/helpers.css">
 		<link rel="stylesheet" href="css/print.css">
+		<link rel="stylesheet" href="css/flickity.css">
 		<!-- Stylesheets -->
-
-		<!-- Modernizr -->
-		<script src="js/vendor/modernizr-3.3.1.min.js"></script>
-		<!-- Modernizr -->
 
 	</head>
 	<body>
@@ -63,11 +60,19 @@
 
 			<img src="img/project/1.jpg" alt="Descriptive text goes here" class="image-block">
 
-			<img src="img/project/2.jpg" alt="Descriptive text goes here" class="image-block">
-
-			<img src="img/project/3.jpg" alt="Descriptive text goes here" class="image-block">
-
-			<img src="img/project/4.jpg" alt="Descriptive text goes here" class="image-block">
+			<!-- Carousel -->
+			<div class="main-carousel">
+				<div class="carousel-cell">
+					<img src="img/project/2.jpg" alt="Descriptive text goes here">
+				</div>
+				<div class="carousel-cell">
+					<img src="img/project/3.jpg" alt="Descriptive text goes here">
+				</div>
+				<div class="carousel-cell">
+					<img src="img/project/4.jpg" alt="Descriptive text goes here">
+				</div>
+			</div>
+			<!-- Carousel -->
 
 			<img src="img/project/5.jpg" alt="Descriptive text goes here" class="image-block">
 
